feat(ui): 新增下载功能和版本管理界面
- 在主界面添加下载和版本管理按钮
- 实现下载视图，包含游戏、整合包、模组和资源包下载选项卡
- 添加版本管理视图，用于安装和删除版本
- 实现资源包管理器，用于获取可用资源包列表和下载资源包
- 新增版本管理器，用于获取可用版本列表和下载版本

TODO:
1.添加资源包列表和下载功能
2.添加模组列表和下载功能
3.添加整合包列表和下载功能